--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "author": "jasonkayzk",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
+    "core-js": "^3.8.1",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
